client/src/main/resources/client/stylesheets/pixelart.css
.pixelField {
    -fx-background-image: url("../images/pixelfield.png");
    -fx-background-color: #D6EAF8;
    -fx-background-radius: 30;
    -fx-background-size: stretch;
    -fx-background-insets: 0,1,2,3,0;
    -fx-padding: 10 20 10 20;
}

.pixelField:hover {
    -fx-background-color: #D4E6F1;
}

.answerButton {
    -fx-border-width: 4;
}

.pixelButton {
    -fx-background-image: url("../images/pixelborder.png");
    -fx-font-family: ARCADECLASSIC;
    -fx-background-size: stretch;
    -fx-background-radius: 30;
    -fx-background-color: #D6EAF8;
    -fx-background-insets: 0,1,2,3,0;
    -fx-font-size: 36;
    -fx-min-width: 128;
    -fx-padding: 10 20 10 20;
}

.rectangularPane {
    -fx-border-width: 5;
}

.pixelButton:hover {
    -fx-background-radius: 30;
    -fx-background-insets: 0,1,2,3,0;
    -fx-padding: 10 20 10 20;
    -fx-background-color: #85C1E9;
    -fx-scale-y: -1;
}

.arrowButton {
    -fx-background-image: url("../images/pixelborder.png");
    -fx-background-size: stretch;
    -fx-background-radius: 30;
    -fx-background-color: #D6EAF8;
    -fx-background-insets: 0,1,2,3,0;
    -fx-min-width: 32;
    -fx-padding: 10 20 10 20;
}

.arrowButton:hover {
    -fx-background-color: #85C1E9;
}

.backArrowImage {
    -fx-image: url("../icons/back.png");
}

.frontArrowImage {
    -fx-image: url("../icons/front.png");
}

.scoreText {
    -fx-font-family: ARCADECLASSIC;
    -fx-font-size: 40;
}

.root {
    -fx-background-color: #A9CCE3;
}

#scoreTable {
    -fx-font-family: Monospaced;
}

#waitingTitle {
    -fx-font-family: ARCADECLASSIC;

}

.leaderboardImage {
    -fx-image: url("../images/leaderboard.png");
}

#helpButton:hover {
    -fx-scale-y: -1;
}

#soloText:hover,
#multiplayerText:hover{
    -fx-font-size: 40px;
}

#bulbView{
    -fx-image: url("../icons/giflight.gif");
}

#questionMark{
    -fx-image: url("../icons/help.png");
}
#x2Points,
#doublePointsImage{
    -fx-image: url("../images/x2points.png");
}
#minusOne,
#removeIncorrectImage{
    -fx-image: url("../images/removechoice.png");
}
#halfTime,
#reduceTimeImage{
    -fx-image: url("../images/half-time.png");
}

